--- a/src/Components/Team/Team.css
+++ b/src/Components/Team/Team.css
@@ -1,54 +1,48 @@
 .Team{
     background-color: #0b1e38;
+    padding-top: 100px;
     
 }
-main[page=about] section[type=grid] {
+ section[type=grid] {
     padding-top: 100px;
     margin-bottom: -20px;
 }
-main[page=about] section[type=grid] .grid-header {
+ /* section[type=grid] .grid-header {
     margin-bottom: 0;
-}
+} */
 @media (min-width: 61.25em)
 {section[type=grid] .grid-header {
     margin-bottom: 70px;
 }}
+/* @media (max-width: 68.78em)
+{ section[type=grid] .center {
+    padding-left: 30px;
+    padding-right: 30px;
+}} */
 
 section[type=grid] .grid-header {
-    margin-bottom: 40px;
+    margin-bottom: 0px;
 }
-[in-view=fade-up] {
-    transition: opacity 1s cubic-bezier(.5,0,.2,1),-webkit-transform 1s cubic-bezier(0,.7,.1,1);
-    transition: transform 1s cubic-bezier(0,.7,.1,1),opacity 1s cubic-bezier(.5,0,.2,1);
-    transition: transform 1s cubic-bezier(0,.7,.1,1),opacity 1s cubic-bezier(.5,0,.2,1),-webkit-transform 1s cubic-bezier(0,.7,.1,1);
-    will-change: transform,opacity;
+section[type=grid] .grid-list {
+    padding-bottom: 0;
 }
-@media (max-width: 68.74em)
-{main[page=about] section[type=grid] .center {
-    padding-left: 0;
-    padding-right: 0;
-}}
 
-main[page=about] section[type=grid] .center {
+/* @media (min-width: 68.24em)
+{
+ section[type=grid] .center {
     padding-left: 94px;
     padding-right: 94px;
 }
+} */
+@media (max-width: 46.24em)
+{ section[type=grid] .grid-item {
+    width: 100%;
+}}
+@media (max-width: 61.24em)
+{ section[type=grid] .grid-item {
+    width: 33.333%;
+}}
 
-
-
-section[type=grid] .grid-list {
-    position: relative;
-    margin-right: -17px;
-    margin-left: -17px;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-flex-wrap: wrap;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-    z-index: 3;
-    padding-bottom: 140px;
-}
 @media (min-width: 46.25em)
 {section[type=grid] .grid-item {
     width: 50%;
@@ -56,30 +50,24 @@ section[type=grid] .grid-list {
     padding-right: 17px;
 }}
 
-main[page=about] section[type=grid] .grid-item {
-    margin-bottom: 60px;
-    padding-bottom: 0;
-    width: 25%;
-    -webkit-transform: none;
-    transform: none;
-}
+ 
 @media (min-width: 61.25em)
 {section[type=grid] .grid-item {
     width: 33.3333333333%;
 }}
 
-main[page=about] section[type=grid] .grid-item {
+ section[type=grid] .grid-item {
     margin-bottom: 60px;
     padding-bottom: 0;
-    width: 25%;
+    width: 21%;
     -webkit-transform: none;
     transform: none;
 }
-@media (min-width: 61.25em)
+/* @media (min-width: 61.25em)
 {section[type=grid] .grid-item:nth-child(3n+2) {
     -webkit-transform: translateY(100px);
-    transform: translateY(100px);
-}}
+     transform: translateY(100px);
+}} */
 .section-title {
     font-family: 'California',Times,Georgia,serif;
     font-weight: 500;
@@ -88,6 +76,7 @@ main[page=about] section[type=grid] .grid-item {
     /* color: #fff; */
     margin-bottom: 60px;
 }
+
 section[type=grid] .grid-list {
     position: relative;
     margin-right: -17px;
@@ -99,8 +88,13 @@ section[type=grid] .grid-list {
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
     z-index: 3;
-    padding-bottom: 140px;
+    /* padding-bottom: 140px; */
 }
+/* @media (min-width: 61.25em)
+{section[type=grid] .grid-item:nth-child(3n+3) {
+    -webkit-transform: translateY(30px);
+    transform: translateY(30px);
+}} */
 
 [in-view=fade-up] {
     transition: opacity 1s cubic-bezier(.5,0,.2,1),-webkit-transform 1s cubic-bezier(0,.7,.1,1);
@@ -120,11 +114,15 @@ section[type=grid] .grid-picture img {
     display: block;
     width: 100%;
 }
-main[page=about] section[type=grid] .grid-title {
+img {
+    display: block;
+    max-width: 100%;
+}
+ section[type=grid] .grid-title {
     margin-top: -50px;
     margin-right: 16px;
     margin-left: 16px;
-    font-size: 2.1875rem;
+    font-size: 2.1875rem !important;
 }
 
 .backgroundcliptext .section-subhead>span, .backgroundcliptext .section-subtitle>span {
@@ -159,11 +157,14 @@ section[type=grid] .grid-title {
     transform: skewY(-11.5deg);
     z-index: 5;
 }
-main[page=about] section[type=grid] .grid-subtitle {
+ section[type=grid] .grid-subtitle {
     padding-right: 0;
     padding-left: 46px;
     margin-top: 20px;
     text-align: left;
+}
+main[page=about] section[type=grid] .grid-item:nth-child(4n+2) [in-view=fade-up] {
+    transition-delay: .1s;
 }
 section[type=grid] .grid-subtitle {
     font-weight: 700;
@@ -172,8 +173,8 @@ section[type=grid] .grid-subtitle {
     letter-spacing: .4em;
     text-transform: uppercase;
     color: rgba(185,215,255,.5);
-    padding-left: 100px;
-    padding-right: 30px;
+    /* padding-left: 100px;
+    padding-right: 30px; */
     min-height: 43.2px;
 }
 @media (max-width: 61.24em)
