--- a/src/Components/Timeline/Timeline.css
+++ b/src/Components/Timeline/Timeline.css
@@ -1,2 +1,5 @@
 .Timeline{background-color: #0b1e38 !important;
      align-items: center;}
+.vertical-timeline-element-date{
+     color:#00b69d
+}
