--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
   font-style: normal;
   /* font-size: 1rem; */
   line-height: 2;
+  /* background-color: #0b1e38; */
   /* color: rgba(185,215,255,.5); */
 }
 
