--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,82 +1,169 @@
-.navbar{
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    border-bottom: 5px;
-    color: #F5F9FC;
-    /* text-shadow: 2px 2px 60px var(--accent-primary-default); */
-    background-color:transparent;
-    /* border: 1px solid #1C2333; */
-    padding: 20px;
-    position:fixed;
-    visibility: visible;
-    /* background-color: aqua; */
-  }
-  
-  .navbar__left{
-    flex: 0.3;
-  }
-  
-  .navbar__right{
-    display: flex;
-    flex-direction: row;
-    /* justify-content:space-around; */
-    flex:0.7;
-    white-space: nowrap;
-    align-items: center;
+.navbar {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  border-bottom: 5px;
+  color: #f5f9fc;
+  /* text-shadow: 2px 2px 60px var(--accent-primary-default); */
+  background-color: transparent;
+  /* border: 1px solid #1C2333; */
+  padding: 20px;
+  position: fixed;
+  visibility: visible;
+  /* background-color: aqua; */
 }
-.navbar__right h3{
 
-    padding: 3px 20px;
-    font-size: 16px;
-    font-weight: 500;
-    border-bottom: 1px solid transparent;
-
-  }
-
-.logo{
-      height: 55px;
-      padding-left: 20px;
-      
+.navbar__left {
+  flex: 0.3;
 }
-a{
+
+.navbar__right {
+  display: flex;
+  flex-direction: row;
+  /* justify-content:space-around; */
+  flex: 0.7;
+  white-space: nowrap;
+  align-items: center;
+}
+.navbar__right h3 {
+  padding: 3px 20px;
+  font-size: 16px;
+  font-weight: 500;
+  border-bottom: 1px solid transparent;
+}
+
+.logo {
+  height: 55px;
+  padding-left: 20px;
+}
+a {
   cursor: pointer;
 }
 
-.wrap{
-	text-align: center;
+.wrap {
+  text-align: center;
+  overflow-x: hidden;
 }
 
-.nav{
-	height: 80px;
+.nav {
+  height: 80px;
 }
 
-Navlink{
-	margin: 200px auto;
-	width: 800px;
-	list-style: none;
-	background: rgba(0, 0, 0, 0.2);
+Navlink {
+  margin: 200px auto;
+  width: 800px;
+  list-style: none;
+  background: rgba(0, 0, 0, 0.2);
 }
 
-li{
-	margin-top: 25px;
-	display: inline-block;
+li {
+  margin-top: 25px;
+  display: inline-block;
 }
 
 Navlink a {
-	text-decoration: none;
-	color: #fff;
-	font-family: 'quicksand','cursive';
-	font-weight: lighter;
-	font-size: 25px;
-	transition: 1s;
-	padding: 25px;
+  text-decoration: none;
+  color: #fff;
+  font-family: "quicksand", "cursive";
+  font-weight: lighter;
+  font-size: 25px;
+  transition: 1s;
+  padding: 25px;
 }
 
+li a:hover {
+  transition: 1s;
+  background: rgba(255, 255, 255, 0.7);
+  color: #000;
+}
 
-li a:hover{
-	transition: 1s;
-	background: rgba(255, 255, 255, 0.7);
-	color: #000;
+@import url("https://fonts.googleapis.com/css?family=Cutive+Mono");
+label .menu {
+  position: absolute;
+  right: 0px;
+  top: -100px;
+  z-index: 100;
+  width: 99px;
+  height: 179px;
+  background: #fff;
+  border-radius: 50% 0% 0% 256%;
+  transition: 0.5s ease-in-out;
+  box-shadow: 0 0 0 0 #fff, 0 0 0 0 #fff;
+  cursor: pointer;
+}
+label .hamburger {
+  position: absolute;
+  top: 135px;
+  left: 50px;
+  width: 30px;
+  height: 2px;
+  background: #000;
+  display: block;
+  transform-origin: center;
+  transition: 0.5s ease-in-out;
+}
+label .hamburger:after,
+label .hamburger:before {
+  transition: 0.5s ease-in-out;
+  content: "";
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 100%;
+  background: #000;
+}
+label .hamburger:before {
+  top: -10px;
+}
+label .hamburger:after {
+  bottom: -10px;
+}
+label input {
+  display: none;
+}
+label input:checked + .menu {
+  box-shadow: 0 0 0 100vw #fff, 0 0 0 100vh #fff;
+  border-radius: 0;
+}
+label input:checked + .menu .hamburger {
+  transform: rotate(45deg);
+}
+label input:checked + .menu .hamburger:after {
+  transform: rotate(90deg);
+  bottom: 0;
+}
+label input:checked + .menu .hamburger:before {
+  transform: rotate(90deg);
+  top: 0;
+}
+label input:checked + .menu + ul {
+  opacity: 1;
+}
+label ul {
+  z-index: 200;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  transition: 0.25s 0s ease-in-out;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+label link {
+  margin-bottom: 1em;
+  display: block;
+  color: #000;
+  text-decoration: none;
+}
 
+.dropdown {
+  display: none;
+}
+
+@media screen and (max-width: 769px) {
+  .dropdown {
+    display: block;
+  }
 }
