--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -12,6 +12,9 @@
   visibility: visible;
   /* background-color: aqua; */
 }
+.MENU{
+  color: white !important;
+}
 
 .navbar__left {
   flex: 0.3;
@@ -85,7 +88,7 @@ label .menu {
   z-index: 100;
   width: 99px;
   height: 179px;
-  background: #fff;
+  background: transparent;
   border-radius: 50% 0% 0% 256%;
   transition: 0.5s ease-in-out;
   box-shadow: 0 0 0 0 #fff, 0 0 0 0 #fff;
@@ -97,7 +100,7 @@ label .hamburger {
   left: 50px;
   width: 30px;
   height: 2px;
-  background: #000;
+  background: white;
   display: block;
   transform-origin: center;
   transition: 0.5s ease-in-out;
@@ -110,7 +113,7 @@ label .hamburger:before {
   display: block;
   width: 100%;
   height: 100%;
-  background: #000;
+  background: white;
 }
 label .hamburger:before {
   top: -10px;
@@ -122,7 +125,7 @@ label input {
   display: none;
 }
 label input:checked + .menu {
-  box-shadow: 0 0 0 100vw #fff, 0 0 0 100vh #fff;
+  box-shadow: 0 0 0 100vw rgb(8, 8, 8), 0 0 0 100vh rgb(5, 5, 5);
   border-radius: 0;
 }
 label input:checked + .menu .hamburger {
@@ -162,8 +165,9 @@ label link {
   display: none;
 }
 
-@media screen and (max-width: 769px) {
+@media screen and (max-width: 6000px) {
   .dropdown {
     display: block;
   }
 }
+
