--- a/src/Components/Landing/Landing.css
+++ b/src/Components/Landing/Landing.css
@@ -1,5 +1,15 @@
+@import url("https://fonts.googleapis.com/css?family=Caveat|Righteous&display=swap");
 .landing__Heading{
-    height:15em;
+    /* height:15em; */
+    font-family: "Righteous", cursive;
+    background: url("https://media.giphy.com/media/FE0WTM8BG754I/giphy.gif") center center no-repeat;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-size: 10rem;
+    letter-spacing: 10px;
+    background-size: cover;
+    margin: 0px;
+    color: transparent;
 }
 .landing{
     /* background-color: var(--background-root); */
@@ -13,7 +23,7 @@
     background-image: url('./landing-bg.jpeg');
     background-repeat: no-repeat; 
     background-size: cover; 
-    height:100vh;  
+    height:99vh;  
     overflow: hidden;
     background-size: cover;
     /* animation: animateBg 55s linear infinite; */
@@ -148,3 +158,19 @@
     }
     
 } */
+
+button.mv {
+    margin-top: 30px;
+    background: none;
+    color: #35e5fd;
+    font-size: 18px;
+    border: 2px solid #35e5fd;
+    /* margin-top: 100px; */
+    border-radius: 40px;
+    height: 50px;
+    width: 150px;
+    -webkit-border-radius: 40px;
+    -moz-border-radius: 40px;
+    -ms-border-radius: 40px;
+    -o-border-radius: 40px;
+}
