--- a/src/Components/Gallery/Yearwise/Yearwise.css
+++ b/src/Components/Gallery/Yearwise/Yearwise.css
@@ -95,7 +95,7 @@
   font-size: 16px;
   color: white;
   opacity: 0;
-  background: linear-gradient(0deg, rgba(0, 0, 0, 0.5) 0%, rgba(255, 255, 255, 0) 100%);
+  /* background: linear-gradient(0deg, rgba(0, 0, 0, 0.5) 0%, rgba(255, 255, 255, 0) 100%); */
   transition: 0.3s;
 }
 .gallery__column>img{
