--- a/src/Components/Speaker/Speakers.css
+++ b/src/Components/Speaker/Speakers.css
@@ -1,5 +1,7 @@
 .Speakers{
-    background-color: #0b1e38;
+    /* background-color: #0b1e38; */
+    background-image: url( https://www.manufosela.es/shooting_stars/stars_5.png);
+    color:transparent; 
     padding-top:50px;
 }
 
