--- a/src/App.css
+++ b/src/App.css
@@ -41,13 +41,35 @@ section[type] .center {
 .section-subhead, .section-subtitle {
   font-weight: 500;
   color: #00b69d;
-  font-size: .625rem;
+  font-size: 1rem;
   line-height: 2.6;
   letter-spacing: .4em;
   text-transform: uppercase;
 }
-.App{
+/* .App{
   height: auto;
     width: 100%;
     background-color: #0b1e38;
+    background-image: url( https://www.manufosela.es/shooting_stars/stars_5.png);
+    color:transparent; 
 }
+
+.App {
+  background-image:  url(../src/Components/assets/home/background-home-mobile.jpg);
+  background-size: cover;
+  background-position: bottom center;
+  background-repeat: no-repeat;
+}
+
+@media (min-width: 35rem) {
+  .App {
+      background-position: center center;
+      background-image:  url(../src/Components/assets/home/background-home-mobile.jpg);
+  }
+}
+
+@media (min-width: 45rem) {
+  .App {
+      background-image:  url(../src/Components/assets/home/background-home-desktop.jpg);
+  }
+}  */
