--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -2,7 +2,9 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    background-color: #0b1e38;
+    /* background-color: #0b1e38; */
+    /* background-image: url( https://www.manufosela.es/shooting_stars/stars_5.png); */
+    color:transparent; 
     padding: 15px;
     justify-content: center;
     align-items: center;
