--- a/src/Components/Gallery/Gallery.css
+++ b/src/Components/Gallery/Gallery.css
@@ -1,8 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
 .Gallery {
-  text-align: center;
-  background-image: url("https://i.pinimg.com/564x/92/7f/e6/927fe675092970cc89241207067daa23.jpg");
-  margin: 0 80px 0 80px;
+  /* text-align: center; */
+  /* background-image: url("https://i.pinimg.com/564x/92/7f/e6/927fe675092970cc89241207067daa23.jpg"); */
+  /* background-image: url(   https://www.manufosela.es/shooting_stars/hori.png), url( https://www.manufosela.es/shooting_stars/stars_5.png); */
+
+ 
+  /* margin: 0 80px 0 80px; */
   background-position: center;
   background-repeat: repeat;
   background-size: cover;
@@ -10,7 +13,7 @@
 }
 .Gallery>p{
   position:relative;
-  font-size:10vw;
+  /* font-size:10vw; */
   font-family: 'Dancing Script', cursive;
   letter-spacing:3%;
   color:white;
@@ -49,3 +52,18 @@
 }
 
 
+#layout { 
+  color:transparent; 
+  width:100%;
+  background-image: url( https://www.manufosela.es/shooting_stars/stars_5.png);
+  background-repeat: repeat-x, repeat-x repeat-y;
+  transform:translate3D(0em, 0em, 0);
+  animation: stars 21s ease;
+  padding-bottom: 50px; 
+  
+}
+.stars {
+  z-index: 0;
+  position: absolute;
+  transform-style: preserve-3d;
+}
