--- a/src/Components/Speaker/Speaker.css
+++ b/src/Components/Speaker/Speaker.css
@@ -1,11 +1,12 @@
 .Speakers{
-    background-color: #0b1e38;
+    /* background-color: #0b1e38; */
+    background-image: url( https://www.manufosela.es/shooting_stars/stars_5.png);
+    color:transparent; 
     padding-top:50px;
 }
 .post {
-    display: -webkit-flex;
-    display: -ms-flexbox;
     display: flex;
+    justify-content: center;
     -webkit-align-items: flex-start;
     -ms-flex-align: start;
     align-items: flex-start;
@@ -14,7 +15,7 @@
 .speakers__right{
     align-items: center;
     justify-content: center;
-    padding:100px;
+    padding:80px;
 }
 .speakers__left{
     align-items: center;
