--- a/src/Components/Sponsors/Sponsors.css
+++ b/src/Components/Sponsors/Sponsors.css
@@ -1,6 +1,6 @@
 .SponsorsPage{
     /* background-color: #0b1e38; */
-    /* background-image: url( https://www.manufosela.es/shooting_stars/stars_5.png); */
+    background-image: url( https://www.manufosela.es/shooting_stars/stars_5.png);
     color:transparent; 
 }
 [type=button][layout=sponsor], [type=submit][layout=sponsor] {
