--- a/src/Components/Team/Team.css
+++ b/src/Components/Team/Team.css
@@ -175,7 +175,7 @@ main[page=about] section[type=grid] .grid-item:nth-child(4n+2) [in-view=fade-up]
 }
 section[type=grid] .grid-subtitle {
     font-weight: 700;
-    font-size: .5625rem;
+    font-size: .7625rem;
     line-height: 2.4;
     letter-spacing: .4em;
     text-transform: uppercase;
@@ -183,6 +183,18 @@ section[type=grid] .grid-subtitle {
     /* padding-left: 100px;
     padding-right: 30px; */
     min-height: 43.2px;
+    animation: blink 2s linear infinite;
+}
+@keyframes blink {
+    0%{
+        text-shadow: 0px 4px 26px #da9282;
+    }
+    50%{
+        text-shadow: none;
+    }
+    100%{
+        text-shadow: 0px 4px 26px #da8682;
+    }
 }
 .grid-content{
     display: flex;
@@ -197,7 +209,7 @@ section[type=grid] .grid-subtitle {
 }
 @media (max-width: 61.24em)
 {section[type=grid] .grid-subtitle {
-    font-size: .625rem;
+    font-size: .975rem;
     padding-left: 0;
     padding-right: 0;
 }}
