--- a/src/Components/Sponsors/Sponsors.css
+++ b/src/Components/Sponsors/Sponsors.css
@@ -24,7 +24,7 @@ h2 {
     font-weight: bold;
 }
 @media(max-width:407px){
-    h2{
+    .sponsors-title{
         font-size:1em !important;
     }
 }
