finally fixed all bugs

--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -83,10 +83,9 @@ p {
 }
 
 /* set up the body */
-body {
-  font-family: var(--ff-sans-normal);
-  font-size: var(--fs-400);
-  color: hsl( var(--clr-white) );
+
+ #home{
+
   background-color: hsl( var(--clr-dark) );
   line-height: 1.5;
   min-height: 100vh;
@@ -282,6 +281,7 @@ border: 0;
 .primary-header {
   justify-content: space-between;
   align-items: center;
+  background-color: hsl( var(--clr-dark) );
 }
 
 .primary-navigation {
