--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -84,16 +84,10 @@ p {
 
 /* set up the body */
 
- #home{
+body{
 
   background-color: hsl( var(--clr-dark) );
-  line-height: 1.5;
-  min-height: 100vh;
-  
-  display: grid;
-  grid-template-rows: min-content 1fr;
-  
-  overflow-x: hidden;
+ 
 }
 
 /* make images easier to work with */
