--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -17,6 +17,22 @@
     overflow-x: hidden;
 }
 
+button.mv {
+    /* margin-top: 30px; */
+    background: none;
+    color: #35e5fd;
+    font-size: 18px;
+    border: 2px solid #35e5fd;
+    /* margin-top: 100px; */
+    border-radius: 40px;
+    height: 50px;
+    width: 150px;
+    -webkit-border-radius: 40px;
+    -moz-border-radius: 40px;
+    -ms-border-radius: 40px;
+    -o-border-radius: 40px;
+    cursor: pointer;
+}
 .p-1 {
     width: 150px;
     /* margin-top: 50px; */
@@ -34,7 +50,7 @@
 
 .jscop{
     text-align: center;
-    font-size: 62px;
+    font-size: 70px;
     text-transform: uppercase;
     color: #fcfcfc;
     font-family: system-ui;
