--- a/src/Components/Timeline/Timeline.css
+++ b/src/Components/Timeline/Timeline.css
@@ -1,7 +1,9 @@
 .Timeline{
      /* background-color: #0b1e38 !important; */
      background-image: url( https://www.manufosela.es/shooting_stars/stars_5.png);
-     color:transparent; 
+     color:"#0b1e38"; 
+     font-size: 20px;
+     font-weight: 800;
      align-items: center;}
 .vertical-timeline-element-date{
      color:#00b69d
